--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 html{
   background-color: #b3ff99;
+  font-family: sans-serif;
 }
 
 
@@ -7,13 +8,21 @@ header{
   background-color: #269900;
   border-bottom: 4px solid black;
   box-shadow: 10px 10px 10px black;
-  margin-left: 10px;
-  margin-right: 10px;
   margin-top: auto;
+  margin-left: 1px;
+  margin-right: 1px;
 }
 
+body{
+  margin: auto;
+  width: 1500px;
+  height: 1000px;
+  border-bottom: 5px solid black;
+  border-left: 5px solid black;
+  border-right: 5px solid black;
+}
 main{
-  text-align: center;
+
 }
 
 main h1{
@@ -30,10 +39,25 @@ footer{
   width: 100%;
   bottom: 0;
 }
+
+label{
+  margin: 15px;
+}
 .main_lnks{
   width: 10%;
   display: inline-block;
   margin: 10px;
+}
+
+.center{
+  transform: translate(138%);
+  display: inline-block;
+  padding-top: 250px;
+}
+
+.active{
+  background-color: green;
+
 }
 
 #navBar{
@@ -57,7 +81,20 @@ footer{
   background-color: #111;
 }
 
-#container{
-  position: relative;
-  min-height: 100vh;
+#input_form{
+  color: white;
+  text-align: center;
+  display: block;
+  border: 3px solid black;
+  width: 400px;
+  height: 300px;
+
+  background-color:#333;
+}
+#input_form input[type=text]{
+  margin-top: 90px;
+}
+#input_form input{
+  margin-top: 20px;
+
 }
