--- a/styles/main.css
+++ b/styles/main.css
@@ -11,12 +11,13 @@ header{
   margin-top: auto;
   margin-left: 1px;
   margin-right: 1px;
+  text-align: center;
 }
 
 body{
   margin: auto;
   width: 1500px;
-  height: 1000px;
+  height: auto;
   border-bottom: 5px solid black;
   border-left: 5px solid black;
   border-right: 5px solid black;
@@ -35,29 +36,28 @@ main p{
 footer{
   background-color: #269900;
   border-top: 4px solid black;
-  position: fixed;
-  width: 100%;
-  bottom: 0;
+  height: 50px;
+  position: relative;
 }
 
 label{
   margin: 15px;
 }
-.main_lnks{
-  width: 10%;
-  display: inline-block;
-  margin: 10px;
-}
 
 .center{
-  transform: translate(138%);
   display: inline-block;
-  padding-top: 250px;
+  transform: translate(138%);
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .active{
   background-color: green;
+}
 
+.info{
+  display: block;
+  margin-left: 60px;
 }
 
 #navBar{
