--- a/Project 4/styles/main.css
+++ b/Project 4/styles/main.css
@@ -96,5 +96,12 @@ label{
 }
 #input_form input{
   margin-top: 20px;
-
+}
+#chartcontainer{
+  display: block;
+  height: 500px;
+  width: 900px;
+  margin-left: 100px;
+  margin-bottom: 20px;
+  border: 5px solid black;
 }
