--- a/Project 4/styles/main.css
+++ b/Project 4/styles/main.css
@@ -7,6 +7,7 @@ html{
 header{
   background-color: #269900;
   border-bottom: 4px solid black;
+  border-top: 5px solid black;
   box-shadow: 10px 10px 10px black;
   margin-top: auto;
   margin-left: 1px;
@@ -96,6 +97,26 @@ label{
 }
 #input_form input{
   margin-top: 20px;
+}
+#weight_input{
+  color: white;
+  display: block;
+  border: 3px solid black;
+  width: 400px;
+  height:270px;
+  background-color:#333;
+  margin-left: 550px;
+  margin-bottom: 20px;
+}
+#weight_input table{
+    border-spacing: 30px 20px;
+}
+#center{
+  display: block;
+  text-align: center;
+}
+#bmi_chart{
+  display: inline-block;
 }
 #chartcontainer{
   display: block;
