--- a/Project 4/styles/main.css
+++ b/Project 4/styles/main.css
@@ -1,5 +1,5 @@
 html{
-  background-color: #b3ff99;
+  background-color: #8A9A5B;
   font-family: sans-serif;
 }
 
@@ -22,13 +22,12 @@ body{
   border-bottom: 5px solid black;
   border-left: 5px solid black;
   border-right: 5px solid black;
+  background-color: #b3ff99;
+  box-shadow: 10px 10px 10px black;
 }
-main{
-
-}
-
 main h1{
   font-size: 300%;
+
 }
 main p{
   font-size: 150%;
@@ -45,20 +44,26 @@ label{
   margin: 15px;
 }
 
-.center{
-  display: inline-block;
-  transform: translate(138%);
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-
-.active{
-  background-color: green;
-}
-
 .info{
   display: block;
   margin-left: 60px;
+}
+
+.heading_text{
+  display: block;
+  margin-left: 30px;
+}
+.input_format{
+  color: white;
+  display: block;
+  border-radius: 3px solid black;
+  width: 400px;
+  background-color: #333;
+  margin-bottom: 20px;
+  margin-left: 550px;
+}
+.input_format table{
+  border-spacing: 30px 20px;
 }
 
 #navBar{
@@ -82,35 +87,7 @@ label{
   background-color: #111;
 }
 
-#input_form{
-  color: white;
-  text-align: center;
-  display: block;
-  border: 3px solid black;
-  width: 400px;
-  height: 300px;
 
-  background-color:#333;
-}
-#input_form input[type=text]{
-  margin-top: 90px;
-}
-#input_form input{
-  margin-top: 20px;
-}
-#weight_input{
-  color: white;
-  display: block;
-  border: 3px solid black;
-  width: 400px;
-  height:270px;
-  background-color:#333;
-  margin-left: 550px;
-  margin-bottom: 20px;
-}
-#weight_input table{
-    border-spacing: 30px 20px;
-}
 #center{
   display: block;
   text-align: center;
@@ -122,7 +99,8 @@ label{
   display: block;
   height: 500px;
   width: 900px;
-  margin-left: 100px;
+  margin-left: 300px;
   margin-bottom: 20px;
   border: 5px solid black;
+  box-shadow: 10px 10px 10px black;
 }
